add login, register, home templates

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,14 @@
 {% extends "index.html" %}
 
 {% block content %}
-<h1>Menu</h1>
+<div id="content-wrapper">
+    <img src="../ressources/needles.jpg" alt="" >
+
+    <div class="emphase pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto my-auto text-center align-middle">
+        <h1 class="display-4">Our goal</h1>
+        <p class="lead">Deliver an online service allowing you to consult the list of symptoms of the main pathologies in acupuncture</p>
+    </div>
+</div>
 <p class="important">
     Voici votre menu de la semaine:
     <dl>
