--- a/app/views/register.html
+++ b/app/views/register.html
@@ -3,16 +3,20 @@
 {% block content %}
 <div>
     <div class="emphase pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto my-auto text-center align-middle">
-        <h1 class="display-4">Login</h1>
-        <form>
+        <h1 class="display-4">Register</h1>
+        <form action="" method="post">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" class="form-control" name="mail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Confirm password</label>
+                <input type="password" class="form-control" name="confirmPassword" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
