--- a/app/views/login.html
+++ b/app/views/login.html
@@ -6,9 +6,8 @@
         <h1 class="display-4">Login</h1>
         <form action="" method="post">
             <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="email">Email address</label>
                 <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
@@ -20,6 +19,9 @@
             </div>
             <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
+        {% if passwordIncorrect %}
+            <p>TESTT3TEFJDFJDSO</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
