--- a/app/views/register.html
+++ b/app/views/register.html
@@ -6,24 +6,22 @@
         <h1 class="display-4">Register</h1>
         <form action="" method="post">
             <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" name="mail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Confirm password</label>
-                <input type="password" class="form-control" name="confirmPassword" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                <label for="confirmPassword">Confirm password</label>
+                <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
+        {% if passwordIncorrect %}
+            <p>TESTTESTSTEST</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
