--- a/app/views/login.html
+++ b/app/views/login.html
@@ -19,9 +19,7 @@
             </div>
             <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
-        {% if passwordIncorrect %}
-            <p>TESTT3TEFJDFJDSO</p>
-        {% endif %}
+        {{ errorMessage }}
     </div>
 </div>
 {% endblock %}
