--- a/app/views/register.html
+++ b/app/views/register.html
@@ -19,9 +19,7 @@
             </div>
             <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
-        {% if passwordIncorrect %}
-            <p>TESTTESTSTEST</p>
-        {% endif %}
+        <div>{{ errorMessage }}</div>
     </div>
 </div>
 {% endblock %}
