--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,9 @@
 			<nav class="my-2 my-md-0 mr-md-3">
 				<a class="p-2 text-dark" href="#">Home</a>
 			</nav>
+            <nav class="my-2 my-md-0 mr-md-3">
+				<a class="p-2 text-dark" href="?route=liste">Liste des pathologies</a>
+			</nav>
 			<a class="btn btn-outline-primary mx-3" href="?route=register">Sign up</a>
 			<a class="btn btn-outline-secondary mx-3" href="?route=login">Login</a>
 		</div>
