--- a/app/views/listAll.html
+++ b/app/views/listAll.html
@@ -4,26 +4,31 @@
 <div id="content-wrapper">
     <!--{{ dump(pathologies) }}-->
     <table class="table">
-        <th>Pathologie</th>
-        <th>Symptomes</th>
-        <th>Mots-clefs</th>
-        {% for pathologie in pathologies %}
-            <tr>
-                <td>{{pathologie.desc}}</td>
-                <td>
-                    {% for symp in pathologie.symptomes %}
-                        <li>{{ symp.desc }}</li>
-                    {% endfor %}
-                </td>
-                <td>
-                    {% for symp in pathologie.symptomes %}
-                        {% for keyword in symp.keywords %}
-                            <li>{{ keyword.name }}</li>
+        <thead>
+            <th>Pathologie</th>
+            <th>Symptomes</th>
+            <th>Mots-clefs</th>
+        </thead>
+        <tbody>
+            {% for pathologie in pathologies %}
+                <tr>
+                    <td>{{pathologie.desc}}</td>
+                    <td>
+                        {% for symp in pathologie.symptomes %}
+                            <li>{{ symp.desc }}</li>
                         {% endfor %}
-                    {% endfor %}
-                </td>
-            </tr>
-        {% endfor %}
+                    </td>
+                    <td>
+                        {% for keyword in pathologie.keywords %}
+                            <li>{{ keyword }}</li>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
+</div>
+<div>
+    {{dump(pathologies)}}
 </div>
 {% endblock %}
