Add url redirection

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,11 +7,11 @@
 
 		<!-- Bootstrap CSS -->
 		<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> -->
-		<link href="css/dist/bootstrap.min.css" rel="stylesheet">
+		<link href="/accupuncture/app/css/dist/bootstrap.min.css" rel="stylesheet">
 		<link rel="icon" href="ressources/logo_tris.png" />
 
 		<!-- Custom Styles -->
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="/accupuncture/app/css/styles.css">
 		<title>Actupuncture</title>
 	</head>
 	<body>
