--- a/app/views/search.html
+++ b/app/views/search.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="container">
-    <form action="" method="POST">
+    <form action="" method="GET">
         <div class="form-row mt-2">
             <div class="input-group input-group-lg col-md-12 mx-auto">
-                    <input name="search" type="text" class="form-control" placeholder="Enter a keyword (or keywords separated by ' ; ' )">
+                    <input name="s" type="text" class="form-control" placeholder="Enter a keyword (or keywords separated by ' ; ' )">
                     <div class="input-group-prepend">
                         <button class="btn btn-primary" type="submit">Search</button>
                     </div>
