--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
             <nav class="my-2 my-md-0 mr-md-3">
 				<a class="p-2 text-dark" href="?route=liste">Liste des pathologies</a>
 			</nav>
-            {% if user %}
+            {% if session['user'] %}
             <nav class="my-2 my-md-0 mr-md-3">
 				<a class="p-2 text-dark" href="?route=search">Rechercher</a>
 			</nav>
