--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,9 @@
             <nav class="my-2 my-md-0 mr-md-3">
 				<a class="p-2 text-dark" href="liste">Liste des pathologies</a>
 			</nav>
+            <nav class="my-2 my-md-0 mr-md-3">
+				<a class="p-2 text-dark" href="listMainPathologies">Filtre</a>
+			</nav>
             {% if session['user'] %}
             <nav class="my-2 my-md-0 mr-md-3">
 				<a class="p-2 text-dark" href="search">Rechercher</a>
